Rewrite APIRequest to use apache's HTTP libs
This rewrite almost sorta adds file attachment capability. For some
reason it doesn't work, but at least the app works again.